@@ -1,3 +1,8 @@
+2007-03-14  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/mio_tls.cc: verifying OpenPGP identities
+    * jabberd/jabberd.h: same
+
 2007-02-21  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.cc: setting protocol priorities by config, TLS session
